# test_protobuf_ninja_rebuild

./: CMakeLists.txt  README.md  a.fakeproto  a.proto  b.fakeproto  b.proto  generator.cpp  main.cpp
protobuf/cmake/: protobuf-config-version.cmake  protobuf-module.cmake
protobuf/lib/pkgconfig/: protobuf-lite.pc  protobuf.pc
